--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ body {
     --color-bg: #0c0c0c;
     --color-link: #6b5537;
 	--color-link-hover: #fff;
-	--color-content-title-sub: #6b5537;
+	--color-content-title-sub: f81313;
     color: var(--color-text);
     background-color: var(--color-bg);
     --cursor-stroke: #6b5537;
